// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware ContentMiddleware 1`] = `
Array [
  "[Function: serve]",
  "[Function: serve]",
]
`;

exports[`middleware WebpackMiddleware 1`] = `
Array [
  "hotClient",
  "devMiddleware",
  "close",
]
`;

exports[`middleware WebpackMiddleware Error 1`] = `
"webpack-hot-client

  Options Validation Error

  options.port  should be integer


  options.port  should be integer"
`;

exports[`middleware WebpackMiddleware Error 2`] = `
"Error: An error was thrown while initializing koa-webpack
 webpack-hot-client

  Options Validation Error

  options.port  should be integer


  options.port  should be integer"
`;
